# remote-logging-experiment

./: Cargo.toml  README.md  check.sh  deny.toml  watch.sh
.github/workflows/: rust.yml
docs/: index.html  viewer.js  viewer_bg.wasm
ewebsock/: Cargo.toml
ewebsock/src/: lib.rs  native.rs  native_tungstenite.rs  web.rs
example_app/: Cargo.toml
example_app/src/: main.rs
logger/: Cargo.toml
logger/src/: lib.rs  main.rs
native_helper/: Cargo.toml
native_helper/src/: lib.rs
pub_sub_server/: Cargo.toml
pub_sub_server/src/: lib.rs  main.rs
rr_data/: Cargo.toml
rr_data/src/: lib.rs
viewer/: Cargo.toml  build_web.sh  start_server.sh
viewer/src/: app.rs  data_event_log.rs  event_log.rs  flamegraph.rs  lib.rs  main.rs  misc.rs  span_tree.rs  viewer.rs
web_server/: Cargo.toml  build.rs
web_server/src/: lib.rs  main.rs
ws_client/: Cargo.toml  build_web.sh
ws_client/src/: app.rs  lib.rs  main.rs  native.rs  web.rs
ws_server/: Cargo.toml
ws_server/src/: main.rs
