[workspace]
resolver = "2"
members = [
    "ewebsock",
    "logger",
    "rr_data",
    "viewer",
    "pub_sub_server",
]

[patch.crates-io]
# If you want to use the bleeding edge version of egui/eframe:
eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you want to use a fork:
# eframe = { path = "../egui/eframe" }
