[workspace]
resolver = "2"
members = [
    "ewebsock",
    "example_app",
    "logger",
    "native_helper",
    "pub_sub_server",
    "rr_data",
    "viewer",
    "web_server",
]

[patch.crates-io]
# If you want to use the bleeding edge version of egui/eframe:
eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you want to use a fork:
# eframe = { path = "../egui/eframe" }
