[package]
name = "example_app"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

# [lib]
# crate-type = ["cdylib", "rlib"]


[features]
# default = []
# default = ["pub_sub_server"]
# default = ["webbrowser", "web_server"]
default = ["pub_sub_server", "webbrowser", "web_server"]


[dependencies]
logger = { path = "../logger" }
pub_sub_server = { path = "../pub_sub_server", optional = true }
rr_data = { path = "../rr_data" }
web_server = { path = "../web_server", optional = true }

tracing = { version = "0.1", features = ["attributes"] }
webbrowser = { version = "0.5", optional = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
