[package]
name = "logger"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
ewebsock = { path = "../ewebsock" }
parking_lot = "0.12"
rr_data = { path = "../rr_data" }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"
wyhash = "0.5"
