[package]
name = "pub_sub_server"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
rr_data = { path = "../rr_data" }

anyhow = "1.0"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
parking_lot = "0.12"
tokio = { version = "1.0.0", default-features = false, features = [
    "io-std",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-tungstenite = "0.16.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tungstenite = { version = "0.16", default-features = false }
