[package]
name = "rr_data"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
anyhow = "1"
bincode = "1.3"
chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
once_cell = "1.9"
serde = { version = "1", features = ["derive", "rc"] }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
