[package]
name = "viewer"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ewebsock = { path = "../ewebsock" }
rr_data = { path = "../rr_data" }

chrono = "0.4"
eframe = { version = "0.16.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
