[package]
name = "web_server"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
rr_data = { path = "../rr_data" }

futures-util = "0.3"
# hyper = { version = "0.14", features = ["server", "tcp", "http2"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
glob = "0.3.0"
