[package]
name = "ws_server"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"

[dependencies]
rr_data = { path = "../rr_data" }

futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = [
    "io-std",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-tungstenite = "0.16.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tungstenite = { version = "0.16", default-features = false }
